# NameScraper

./: .gitattributes  .gitignore  CLAUDE.md  README.md  audit.sarif  engine.py  gui.py  parsing.py  plex_renamer.py  pyproject.toml  pyrightconfig.json  styles.py  tmdb.py  undo_log.py
.github/: copilot-instructions.md
docs/: README.md  ai-assistant-workflows.md  ai-publish-workflow.md  code-review-plan.md  deferred-work.md  gui-improvements-plan.md  gui3-phase7-parity-audit.md  gui3-pyside6-migration-plan revised.md  gui3-pyside6-ui-design.md  scan-improvement-plan.md
plex_renamer/: __init__.py  __main__.py  _ffprobe.py  _job_execution_filesystem.py  _job_execution_metadata.py  _job_execution_remux.py  _job_path_propagation.py  _job_revert.py  _job_store_codec.py  _job_store_db.py  _job_store_ordering.py  _lang_normalize.py  _mkv_command.py  _mkv_locate.py  _mkv_probe.py  _mkv_tags_render.py  _nfo_render.py  _parsing_episodes.py  _parsing_id_tags.py  _parsing_names.py  _parsing_parts.py  _parsing_seasons.py  _parsing_subtitles.py  _parsing_titles.py  _parsing_tv.py  _provider_errors.py  _tmdb_batch_search.py  _tmdb_image_cache.py  _tmdb_metadata_builder.py  _tmdb_metadata_cache.py  _tmdb_search_helpers.py  _tmdb_season_map.py  _tmdb_snapshot_validation.py  _tmdb_transport.py  _tvdb_payloads.py  _tvdb_transport.py  constants.py  engine.py  gui.py  job_executor.py  (+10 more)
scripts/: audit.cmd  audit.ps1  git-publish.cmd  git-publish.ps1  merge_parts_smoke.py  probe_audio_fields.py  release.cmd  release.ps1  scan_real_library.py  test-fast.cmd  test-fast.ps1  test-smoke.cmd  test-smoke.ps1  test_fast_runner.py  test_smoke_runner.py
tests/: _provider_fakes.py  _scanner_fakes.py  conftest.py  conftest_qt.py  parsing_corpus.py  season_map_test_support.py  test_acronym_titles.py  test_air_date_clusters.py  test_alt_title_matching.py  test_alt_title_matching_orchestrator.py  test_audio_codecs.py  test_automux_merge_planning.py  test_automux_service.py  test_automux_settings.py  test_automux_tracks_widget.py  test_bare_episode_prefix_titles.py  test_batch_autoaccept_guards.py  test_batch_provider_failures.py  test_bulk_assign_panel.py  test_cache_service.py  test_command_gating_service.py  test_companion_subtitles.py  test_completeness_review_counts.py  test_confidence_adjustment_guards.py  test_conflict_queue_protection.py  test_conflict_resolution.py  test_conflict_snapshot_staleness.py  test_consolidated_assignments.py  test_consolidated_two_phase.py  test_cross_season_number_claims.py  test_disc_grouped_run_ambiguity.py  (+164 more)
(+334 files in other folders)
