[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "plex-renamer"
version = "0.1.0"
description = "Plex-compatible media file renamer with TMDB matching"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
    "Pillow>=9.0",
]

[project.optional-dependencies]
qt = [
    "PySide6>=6.6",
]
keyring = [
    "keyring>=24.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
plex-renamer = "plex_renamer.__main__:main"

[tool.setuptools.packages.find]
include = ["plex_renamer*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
