[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plex-renamer"
version = "0.1.0"
description = "Plex-compatible media file renamer with TMDB matching"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
    "Pillow>=9.1",
    "PySide6>=6.6",
    "keyring>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "vulture>=2.10",
    "coverage>=7.4",
    "radon>=6.0",
    "pyright>=1.1.411",
]

[project.scripts]
plex-renamer = "plex_renamer.__main__:main"

[tool.setuptools.packages.find]
include = ["plex_renamer*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "C4", "SIM", "PIE", "RUF"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"plex_renamer/gui_qt/**/*.py" = ["B008", "RUF012"]
"tests/**/*.py" = ["RUF012"]
